feat: react mfe

--- a/examples/communication-mfe-mfe/react-microfrontend/index.html
+++ b/examples/communication-mfe-mfe/react-microfrontend/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="communication-mfe-mfe-react"></div>
+    <communication-mfe-mfe-react></communication-mfe-mfe-react>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
