feat: svelte mfe

--- a/examples/communication-mfe-mfe/svelte-microfrontend/index.html
+++ b/examples/communication-mfe-mfe/svelte-microfrontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
-    <div id="communication-mfe-mfe-svelte"></div>
+    <communication-mfe-mfe-svelte></communication-mfe-mfe-svelte>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
