--- a/examples/communication-mfe-iframe/react-microfrontend/index.html
+++ b/examples/communication-mfe-iframe/react-microfrontend/index.html
@@ -6,7 +6,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="communication-mfe-iframe-react"></div>
+    <communication-react-mfe></communication-react-mfe>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
