--- a/examples/routing-mfe/svelte-microfrontend/index.html
+++ b/examples/routing-mfe/svelte-microfrontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
-    <div id="app"></div>
+    <svelte-routing-mfe></svelte-routing-mfe>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
