--- a/examples/mfe-import-maps/page-config.html
+++ b/examples/mfe-import-maps/page-config.html
@@ -1,4 +1,4 @@
 <div style="display: flex; flex-direction: row">
-    <script type="module-shim" src="//localhost:3001/index.js"></script>
+    <script type="module" src="//localhost:3001/index.js"></script>
     <react-import-map orchy-micro-frontend></react-import-map>
 </div>
