--- a/examples/communication-mfe-iframe/page-config.html
+++ b/examples/communication-mfe-iframe/page-config.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: row">
-    <script type="module" src="/communication-react-mfe/index.js"></script>
+    <script type="module" src="//localhost:3001/src/main.jsx"></script>
     <communication-react-mfe orchy-micro-frontend></communication-react-mfe>
-    <iframe src="/communication-svelte-iframe"></iframe>
+    <iframe src="http://localhost:5000"></iframe>
 </div>
