--- a/examples/communication-mfe-mfe/page-config.html
+++ b/examples/communication-mfe-mfe/page-config.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: row">
-    <script type="module" src="//localhost:3001/index.js"></script>
+    <script type="module" src="//localhost:3001/src/main.jsx"></script>
     <communication-mfe-mfe-react orchy-micro-frontend></communication-mfe-mfe-react>
-    <script type="module" src="//localhost:5000/index.js"></script>
+    <script type="module" src="//localhost:5000/src/main.js"></script>
     <communication-mfe-mfe-svelte orchy-micro-frontend></communication-mfe-mfe-svelte>
 </div>
