--- a/examples/routing-mfe/page-config.html
+++ b/examples/routing-mfe/page-config.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: row">
-    <script type="module" src="//localhost:3001/index.js"></script>
+    <script type="module" src="//localhost:3001/src/main.jsx"></script>
     <react-routing-mfe orchy-micro-frontend></react-routing-mfe>
-    <script type="module" src="//localhost:5000/index.js"></script>
+    <script type="module" src="//localhost:5000/src/main.js"></script>
     <svelte-routing-mfe orchy-micro-frontend></svelte-routing-mfe>
 </div>
