feat: html page config

--- a/examples/all-templates/page-config.html
+++ b/examples/all-templates/page-config.html
@@ -3,20 +3,20 @@
     <angular-mfe orchy-micro-frontend></angular-mfe>
 
     <script type="module" src="//localhost:3001/src/main.tsx"></script>
-    <preact-mfe orchy-micro-frontend></preact-mfe>
+    <preact-mfe-typescript orchy-micro-frontend></preact-mfe-typescript>
 
     <script type="module" src="//localhost:3000/src/main.tsx"></script>
-    <react-mfe orchy-micro-frontend></react-mfe>
+    <react-mfe-typescript orchy-micro-frontend></react-mfe-typescript>
 
     <script type="module" src="//localhost:3002/src/index.tsx"></script>
-    <solid-mfe orchy-micro-frontend></solid-mfe>
+    <solid-mfe-typescript orchy-micro-frontend></solid-mfe-typescript>
 
     <script type="module" src="//localhost:5000/src/main.ts"></script>
-    <svelte-mfe orchy-micro-frontend></svelte-mfe>
+    <svelte-mfe-typescript orchy-micro-frontend></svelte-mfe>
 
     <script type="module" src="//localhost:8080/src/main.ts"></script>
-    <vanilla-mfe orchy-micro-frontend></vanilla-mfe>
+    <vanilla-mfe-typescript orchy-micro-frontend></vanilla-mfe-typescript>
 
     <script type="module" src="//localhost:8081/src/main.ts"></script>
-    <vue-mfe orchy-micro-frontend></vue-mfe>
+    <vue-mfe-typescript orchy-micro-frontend></vue-mfe-typescript>
 </div>
