fix: all templates html config

--- a/examples/all-templates/page-config.html
+++ b/examples/all-templates/page-config.html
@@ -12,7 +12,7 @@
     <solid-mfe-typescript orchy-micro-frontend></solid-mfe-typescript>
 
     <script type="module" src="//localhost:5000/src/main.ts"></script>
-    <svelte-mfe-typescript orchy-micro-frontend></svelte-mfe>
+    <svelte-mfe-typescript orchy-micro-frontend></svelte-mfe-typescript>
 
     <script type="module" src="//localhost:8080/src/main.ts"></script>
     <vanilla-mfe-typescript orchy-micro-frontend></vanilla-mfe-typescript>
