--- a/examples/communication-parent-children/page-config-children.html
+++ b/examples/communication-parent-children/page-config-children.html
@@ -1,4 +1,5 @@
-<div style="display: flex; flex-direction: row">
+<div style="display: flex; flex-direction: row; border: 1px solid red">
+    <span>Children</span>
     <script type="module" src="//localhost:5000/src/main.js"></script>
     <communication-mfe-mfe-svelte orchy-micro-frontend></communication-mfe-mfe-svelte>
 </div>
