--- a/examples/communication-parent-children/page-config-parent.html
+++ b/examples/communication-parent-children/page-config-parent.html
@@ -1,4 +1,5 @@
 <div style="display: flex; flex-direction: column">
+    <span>Parent</span>
     <script type="module" src="//localhost:3001/src/main.jsx"></script>
     <communication-mfe-mfe-react orchy-micro-frontend></communication-mfe-mfe-react>
     <orchy-wc orchy-element configurationName="orchy-config-children.json"></orchy-wc>
