--- a/examples/storage/page-config.html
+++ b/examples/storage/page-config.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: row">
-    <script type="module" src="https://unpkg.com/@orchy-mfe/storage-plugin@0.1.1/dist/orchy-storage-plugin.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@orchy-mfe/storage-plugin@0.1.1/dist/orchy-storage-plugin.js"></script>
     <orchy-storage-plugin orchy-element strategy="session"></orchy-storage-plugin>
     <script type="module" src="//localhost:3001/src/main.jsx"></script>
     <storage-mfe-react orchy-micro-frontend></storage-mfe-react>
